--- a/result.tex
+++ b/result.tex
@@ -865,7 +865,7 @@ We proposed \cite{dominec2014transition} that with the aforementioned geometry, 
 \paragraph{Dense rod array} %{{{
 Further reduction of the unit cell size $a$ to 80 $\upmu$m does not lead to a cross-over of the resonance frequencies, as might be expected. Instead, the individual resonances disappear, and an ordinary Bragg band gap remains, spanning from 480 to 1150~GHz. The corresponding transmittance curve  (plot in red in Fig. \ref{fg_erods_acomparison}b) does not touch zero anywhere in the spectrum. 
 
-Consequently, there is no fast drop of $\Neff'(f)$ (see Fig. \ref{fg_erods_acomparison}c). The effective index of refraction $\Neff'$ maintains high values over whole spectrum, which precludes to describe the structure as a homogeneous one. Thence, the local effective parameters of permittivity and permeability cease to have physically useful values anywhere above the middle of the first photonic band.
+Consequently, there is no fast drop of $\Neff'(f)$ (see Fig. \ref{fg_erods_acomparison}c). The effective index of refraction $\Neff'$ maintains high values over the whole spectrum, which precludes to describe the structure as a homogeneous one. Thence, the local effective parameters of permittivity and permeability cease to have physically useful values anywhere above the middle of the first photonic band.
 This kind of behaviour was already encountered in the spectra of one-dimensional photonic crystal (Figs. \ref{fg_Slab_fillfraction015_epsilon_comparison}, \ref{fg_Slab_fillfraction015_epsilon_comparison}). 
 
 However, the effective index of refraction $\Neff(f)$ is still valid, and its spectrum for $a=80$ $\upmu$m still maintains the shape that $\Neff'$ had for $a=90$ $\upmu$m and even $a=120$ $\upmu$m: Most notably, the negative-index band around 1200 GHz, spanning between the -1th and the 0th Brillouin-zone boundaries) on the green curve has its analogy in a similarly narrow band on the red curve (between the 1th to the 2nd Brillouin-zone boundaries). Also the higher frequency features tend to be similar. This suggests that the only qualitative change between $a=90$ $\upmu$m and $a=80$ $\upmu$m is in \textit{the wave phase}\index{the wave phase} per unit cell.
@@ -953,7 +953,7 @@ This pair of open nodal surfaces dividing the unit cell manifests itself by a qu
 
 % todo \cite{peng2007, vynck2009all}
 
-%todo discuss from short.pdf: "...confirmed by the FDTD results and by their compliance to Kramers-Kronig relations. To illustrate this, the Hilbert transform of the refractive index is plotted as the thin pink line and it nearly perfectly follows the green curve over whole spectrum, except for an additive constant. There is  only one acceptable physical solution that is compatible with the Kramers-Kronig relations."
+%todo discuss from short.pdf: "...confirmed by the FDTD results and by their compliance to Kramers-Kronig relations. To illustrate this, the Hilbert transform of the refractive index is plotted as the thin pink line and it nearly perfectly follows the green curve over the whole spectrum, except for an additive constant. There is  only one acceptable physical solution that is compatible with the Kramers-Kronig relations."
 
 
 %}}}
