--- a/theory.tex
+++ b/theory.tex
@@ -1220,7 +1220,7 @@ Their common assumption is that the wavelength is much larger than the particles
 
 %}}}
 \paragraph{Synthesis of nonresonant sub-wavelength structures} %{{{ ====================== OK
-\begin{figure}[h] \caption{Three examples of artificial dielectrics designs patented half a century ago: \textbf{(a)} sheets containing cut wires of alternating orientation and resonance frequency, enabling to manipulate microwave polarisation, \textbf{(b)} cross-section through a lightweight lens of 3 m diameter designed for 50-500 MHz radio waves, made of partially metallized plastic layers, \textbf{(c)} artificial dielectric made of non-resonant cut wires arranged into a nearly isotropic 3-D lattice. Drawings adapted from patent applications \cite{wickersham1960artificial},  \cite{anderson1967artificial} and \cite{hannan1966artificial}, respectively.} \label{fg_mm_patents} \centering \includegraphics[width=\textwidth]{img/patents/mm_patents.pdf} \end{figure}
+\begin{figure}[h] \caption{Three examples of artificial dielectrics designs patented half a century ago: \textbf{(a)} sheets containing cut wires of alternating orientation and resonance frequency, enabling one to manipulate microwave polarisation, \textbf{(b)} cross-section through a lightweight lens of 3 m diameter designed for 50-500 MHz radio waves, made of partially metallized plastic layers, \textbf{(c)} artificial dielectric made of non-resonant cut wires arranged into a nearly isotropic 3-D lattice. Drawings adapted from patent applications \cite{wickersham1960artificial},  \cite{anderson1967artificial} and \cite{hannan1966artificial}, respectively.} \label{fg_mm_patents} \centering \includegraphics[width=\textwidth]{img/patents/mm_patents.pdf} \end{figure}
 
 The design of inhomogeneous structures that could be treated as homogeneous with some desired properties has also a surprisingly long history. 
 Inspired by the Lorentz-Lorenz formula, Lord Rayleigh theoretically elaborated the wave propagation through a rectangular lattice of cylindrical or spherical particles in 1892. He also noted the analogy between electromagnetic and acoustic waves \cite[p. 498]{rayleigh1892}. His thoughtful analysis was however still limited to the \textit{static limit}\index{limit!static} of frequencies well below any resonance frequency of the particle, and to the \textit{long-wavelength limit}\index{limit!long-wavelength } well below the first photonic band gap. 
@@ -1363,7 +1363,7 @@ Even some recent papers \cite{tsukerman2011nonlocal} define MMs as
 \textit{(...) artificial periodic structures with features smaller than the vacuum wavelength}.
 \end{displayquote}
 
-Studies of MMs and PhCs were both inspired by a wave propagating through the lattice of a natural crystal. The difference was however that in the case of MMs, it was an \textit{optical} wave, whereas in the case of PhCs the inspiration came from the \textit{electron wavefunction}. The wavelength of the valence-band electrons is similar to the inter-atomic distance ($\approx 10^{-10}$ m), always requiring the description by the Bloch's theorem, whereas the wavelength of light is roughly four orders of magnitude larger, enabling to approximate the crystal as a homogeneous medium.
+Studies of MMs and PhCs were both inspired by a wave propagating through the lattice of a natural crystal. The difference was however that in the case of MMs, it was an \textit{optical} wave, whereas in the case of PhCs the inspiration came from the \textit{electron wavefunction}. The wavelength of the valence-band electrons is similar to the inter-atomic distance ($\approx 10^{-10}$ m), always requiring the description by the Bloch's theorem, whereas the wavelength of light is roughly four orders of magnitude larger, enabling one to approximate the crystal as a homogeneous medium.
 
 Analogously, the earlier metamaterials (or, artificial dielectrics) were mostly thought of as deeply subwavelength, which provided a clear and easy distinction from all PhCs. It also allowed to neglect spatial dispersion for the wave. The situation however appears to change with realistic MMs scaling to the optical range, since the wavelength becomes of the same order of magnitude as the unit cell size and both regions start to overlap as illustrated in Fig. \ref{fg_mm_phc_diagram}. Besides, the PhC-MM boundary then becomes also frequency dependent.
 
