--- a/conclusion.tex
+++ b/conclusion.tex
@@ -60,7 +60,7 @@ The Results chapter fills the demand for some starting overview of the electroma
 Throughout the thesis, we encountered some structures that can be easily homogenized, and we argued that our decision to view the structure as homogeneous may form a good criterion to define the notion of \textit{metamaterials}. Different kinds of obstacles may prevent the homogenization.
 
 \textit{Negative refraction} at the interface of air and a given structure does not imply that it has \textit{negative effective index of refraction}, $\Neff'<0$; this homogenized parameter may not even be defined. Anisotropic behaviour is present in all periodic structures; very often is strong enough to preclude the use of $\Neff'$. On page \pageref{indexofrefraction} we have argued that one exception is when the light propagates nearly parallel to an optical axis -- thanks to it, one can assign effective parameters to most metamaterials. An exception from this exception, we suggest on page \pageref{diracpoint}, may in the vicinity of the zero-width band gaps. 
-Some metamaterials have such a strong spatial dispersion that their dispersion curves allow additional waves (Fig. \ref{fg_cdh3}, \ref{fg_dcllactivity}), and this is another reason that precludes to assign them with $\Neff$. 
+Some metamaterials have such a strong spatial dispersion that their dispersion curves allow additional waves (Fig. \ref{fg_cdh2}a, \ref{fg_dcllactivity}), and this is another reason that precludes to assign them with $\Neff$. 
 
 When a scientific method is used beyond its scope, sometimes it leads to mathematical error or returns obviously invalid results. The scattering parameter method, unfortunately, does not indicate its limits of applicability. By its means, a finite slab of a metamaterial can always be assigned with some effective parameters. Even when the spatial dispersion does not enable the excitation of additional waves as is the case of Fig. \ref{fg_cdh_yslit}a, the near-field coupling between neighbouring cells may be relatively strong. Then the scattering-parameter method fails to predict the behaviour of an infinite periodic lattice and $\Neff$ has to be determined by more robust approach, such as the current-driven homogenisation. This is elaborated on page \pageref{sparamweaknesses}. We propose that the absence of skips in the scattering-parameter method results, their compliance to Kramers-Kronig relations and their zero (or at most weak) dependence of the number of simulated unit cells are a good verification.
 %	- (the choice of branch for Neff is unambiguous by our retrieval procedure based on FDTD; yet it deserves
