--- a/expe.tex
+++ b/expe.tex
@@ -54,7 +54,7 @@ To reduce the noise, synchronous detection with the \textit{Stanford SRS360} loc
 
 %The time constant of the lock-in acquisition was comparable to the time which was needed by the delay lines to introduce a picosecond delay. As a result, the speed of delay lines movement suppressed the high-frequency components of the detected signal. Attention must be paid at precise control of the delay line speed and software compensation of the artifacts.
 
-The spectral response of both the emitter and electrooptic sampling substantially influenced the measured sample spectra. Moreover, the phase of the recorded waves was modulated too, as a beam passing through a focus acquires additional phase due to the Gouy shift \cite{kuvzel2010gouy}. Every transmission measurement was therefore normalized in frequency domain against a corresponding free-space reference, so that both the amplitude and phase artifacts cancelled out. 
+The spectral response of both the emitter and electrooptic sampling substantially influenced the measured sample spectra. Moreover, the phase of the recorded waves was modulated too, as a beam passing through a focus acquires additional phase due to the Gouy shift \cite{kuzel2010gouy}. Every transmission measurement was therefore normalized in frequency domain against a corresponding free-space reference, so that both the amplitude and phase artifacts cancelled out. 
 
 %}}}
 
