--- a/fdphd.bib
+++ b/fdphd.bib
@@ -366,6 +366,18 @@ Terahertz spectroscopy of ferroelectrics and related materials
 }
 /*}}}*/
 % ---- other ----/*{{{*/
+@article{kuzel2010gouy,
+  title={Gouy shift correction for highly accurate refractive index retrieval in time-domain terahertz spectroscopy},
+  author={Ku{\v{z}}el, P and N{\v{e}}mec, H and Kadlec, F and Kadlec, C},
+  journal={Optics express},
+  volume={18},
+  number={15},
+  pages={15338--15348},
+  year={2010},
+  publisher={Optical Society of America}
+}
+
+
 % /*}}}*/
 
 % == Patents ==/*{{{*/
@@ -1414,28 +1426,6 @@ Terahertz spectroscopy of ferroelectrics and related materials
   year={2010},
   publisher={AIP Publishing}
 }
-@article{valentine2011development,
-  title={Development of bulk optical negative index fishnet metamaterials: Achieving a low-loss and broadband response through coupling},
-  author={Valentine, Jason and Zhang, Shuang and Zentgraf, Thomas and Zhang, Xiang},
-  journal={Proceedings of the IEEE},
-  volume={99},
-  number={10},
-  pages={1682--1690},
-  year={2011},
-  publisher={IEEE}
-}
-@article{navarro2011dual,
-  title={Dual-band double-negative-index fishnet metamaterial at millimeter-waves},
-  author={Navarro-C{\'\i}a, Miguel and Garc{\'\i}a-Meca, Carlos and Beruete, Miguel and Mart{\'\i}nez, Alejandro and Sorolla, Mario},
-  journal={Optics letters},
-  volume={36},
-  number={21},
-  pages={4245--4247},
-  year={2011},
-  publisher={Optical Society of America}
-}
-
-
 
 
 
@@ -1524,7 +1514,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
   publisher={Optical Society of America}
 }
 @article{navarro2011dual,
-  title={Dual-band double-negative-index fishnet metamaterial at millimeter-waves},
+  title={Dual-band double-negative-index fishnet metamaterial at millimeter waves},
   author={Navarro-C{\'\i}a, Miguel and Garc{\'\i}a-Meca, Carlos and Beruete, Miguel and Mart{\'\i}nez, Alejandro and Sorolla, Mario},
   journal={Optics letters},
   volume={36},
@@ -2125,16 +2115,16 @@ lts.fzu.cz/pdf/d-js.pdf
 }
 /*}}}*/
 % -- Filter diagonalisation (todo) --/*{{{*/
-%@article{mandelshtam1997harmonic,
-  %title={Harmonic inversion of time signals and its applications},
-  %author={Mandelshtam, Vladimir A and Taylor, Howard S},
-  %journal={The Journal of chemical physics},
-  %volume={107},
-  %number={17},
-  %pages={6756--6769},
-  %year={1997},
-  %publisher={AIP Publishing}
-%}
+@article{mandelshtam1997harmonic,
+  title={Harmonic inversion of time signals and its applications},
+  author={Mandelshtam, Vladimir A and Taylor, Howard S},
+  journal={The Journal of chemical physics},
+  volume={107},
+  number={17},
+  pages={6756--6769},
+  year={1997},
+  publisher={AIP Publishing}
+}
 @thesis{chen2001filter,
   title={Filter diagonalization method as a high resolution spectral estimator},
   author={Chen, Jianhan},
@@ -2846,16 +2836,6 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
   publisher={Nature Publishing Group}
 }
 /*}}}*/
-@article{wang2010composite,
-  title={Composite left/right-handed stacked hole arrays at submillimeter wavelengths},
-  author={Wang, Shengxiang and Garet, Fr{\'e}d{\'e}ric and Blary, Karine and Cro{\"e}nne, Charles and Lheurette, Eric and Coutaz, Jean-Louis and Lippens, Didier},
-  journal={J. Appl. Phys.},
-  volume={107},
-  number={7},
-  pages={074510},
-  year={2010},
-  publisher={AIP Publishing}
-}
 @book{solymar2009waves,
   title={Waves in metamaterials},
   author={Solymar, Laszlo and Shamonina, Ekaterina},
