--- a/tables.tex
+++ b/tables.tex
@@ -13,6 +13,7 @@ FDM 		& Filter diagonalisation method (algorithm)\\
 FDTD 		& Finite-difference time-domain (algorithm)\\
 FEM 		& Finite-element method (algorithm)\\
 FFT 		& Fast Fourier transform (algorithm)\\
+FOM 		& Figure of Merit\\
 FRoI 		& Frequency range of interest\\
 GVD 		& Group velocity dispersion \\
 IFC			& Isofrequency contours\\
