--- a/theory.tex
+++ b/theory.tex
@@ -615,7 +615,7 @@ Further terms in the permittivity $\epsLL(\omega,\kk)$ expansion in Eq. (\ref{eq
 As the simplest example we add one scalar term $\alpha(\omega) k^4$ to $\epsLL(\omega,\kk)$ in Eq. (\ref{eq_epsmusd1}). The shape of $\alpha(\omega)$  was chosen as a weak Lorentz oscillator at the resonance frequency of the ordinary electric response $\chi_e(\omega)$. This term is shown by adding a thin blue line in the left column of Fig. \ref{fg_dcll_nl}.
 
 \label{chap_sd}
-The choice of the same resonance frequency for $\chi_e(\omega)$ and $\alpha(\omega)$ is not arbitrary; it is assumed that both terms arise from the same resonance mode that has a field shape different from that of a simple dipole.  The relation of higher-order expansion terms of the Landau-Lifshitz permittivity  to the multipole expansion of the field shape is developed e.g. in Refs. \cite{agranovich2006spatial}, \cite{vinogradov2002form}, \cite{fietz2011homogenization} and \cite{chipouline2012metamaterials}.
+The choice of the same resonance frequency for $\chi_e(\omega)$ and $\alpha(\omega)$ is not arbitrary; it is assumed that both terms arise from the same resonance mode that has a field shape different from that of a simple dipole.  The relation of higher-order expansion terms of the Landau-Lifshitz permittivity  to the multipole expansion of the field shape is developed e.g. in Refs. \cite{agranovich2006spatial}, \cite{vinogradov2002form} and \cite{fietz2011homogenization}.
 
 The choices of a positive amplitude (Fig. \ref{fg_dcll_nl}a) and a negative one (Fig. \ref{fg_dcll_nl}b) have typical impacts on the dispersion curves. In the former case, both polariton branches deviate one from another with growing frequency. In the latter case, they come closer to each other with growing $k$. Eventually, in the upper right corner of the right plot in Fig. \ref{fg_dcll_nl}b, they merge into one loop. The author, however, believes this merging may not be observed in nature, and that its occurrence is only due to unrealistic values of the $\alpha(\omega)$ coefficient or the absence of higher-order expansion terms.
 
@@ -789,7 +789,7 @@ $$\exists K\in \mathbb{C}: \hat T\psi = e^{-\ii Ka}\psi.$$
 
 %}}}
 \paragraph{The Bloch's theorem proof in the electromagnetic formulation}%{{{
-\index{Bloch's!theorem proof}
+\index{Bloch's!theorem, proof}
 The steps can be reformulated replacing the abstract Hamiltonian with an operator derived from the Maxwell equations. In a periodic structure one can no longer assume the solution in the form of a plane wave (\ref{eq_pw}), but as long as the structure is time-invariant and linear, the monochromatic electric and magnetic fields can still be decomposed into a product of some complex function of space position, and a harmonic function of time:
 \begin{equation} 
 \begin{array}{cc}
@@ -1317,7 +1317,7 @@ or tunes the individual resonance frequency keeping the lattice parameters uncha
 In more abstract studies, the structure of the unit cell with its full electrodynamic behaviour is substituted by a flat homogeneous layer characterized only by its effective parameters which may be negative at certain frequencies. % This is equivalent to examining a one-dimensional structure of alternating layers of positive and negative effective parameters.
 This approach is only an approximation, since usually the unit cell behaviour involves its coupling with nonradiative fields, which can no more be taken into account when they are replaced by a layer. The advantage is however in the possibility to use analytic means for understanding of the factors forming the band diagram.
 
-Such an unusual photonic crystal can exhibit a specific \textit{zero-order photonic band gap}\index{band gap!photonic, of zero-order} \cite{li2003photonic, chen2006derivation, panoiu2006zero} when the phase advance through the layer stack is zero, as has been confirmed also on an experimental basis \cite{kocaman2011zero}. In contrast, the typical photonic band gaps in positive-index dielectric layers occur when the phase advance is $\pi M, M\in \mathbb{N}$ \cite{joannopoulos2011photonic}. 
+Such an unusual photonic crystal can exhibit a specific \textit{zero-order photonic band gap}\index{band gap!photonic, of zero order} \cite{li2003photonic, chen2006derivation, panoiu2006zero} when the phase advance through the layer stack is zero, as has been confirmed also on an experimental basis \cite{kocaman2011zero}. In contrast, the typical photonic band gaps in positive-index dielectric layers occur when the phase advance is $\pi M, M\in \mathbb{N}$ \cite{joannopoulos2011photonic}. 
 The characteristic property of the \textit{zero-order} band gap lies in its insensitivity to the structure scaling. The band gap can thus be observed even when the spacing of the hypothetical PhC is deeply subwavelength.
 
 Another type of a band gap with a different field pattern was predicted \cite{wang2004omnidirectional} for a case when layers with $\epsrl>0, \murl<0$ and $\epsrl<0, \murl>0$  are stacked. %It is assumed that the energy transfer is mediated through near-field coupling of surface plasmons.
